# broca

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml
crates/broca/: CHANGELOG.md  Cargo.toml
crates/broca-args/: Cargo.toml
crates/broca-args/src/: lib.rs
crates/broca-config/: Cargo.toml
crates/broca-config/src/: lib.rs  site.rs  toml.rs
crates/broca/src/: inspect.rs  main.rs
crates/broca/tests/testsuite/: inspect_config.rs  inspect_discover.rs  inspect_root.rs  macros.rs  main.rs  ui.rs
src/: lib.rs
