[package]
name = "broca-config"
version = "0.0.1"
description = "DESCRIPTION"
categories = []
keywords = []
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: {{repository}}/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = []
serde = ["dep:serde", "camino/serde1"]
toml = ["serde", "dep:toml", "dep:serde_ignored"]

[dependencies]
anyhow = "1.0.102"
camino = "1.2.2"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_ignored = { version = "0.1.14", optional = true }
toml = { version = "1.1.2", default-features = false, features = ["fast_hash", "parse", "preserve_order", "serde", "std"], optional = true }

[lints]
workspace = true
