[package]
name = "broca"
version = "0.0.1"
description = "DESCRIPTION"
categories = []
keywords = []
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: {{repository}}/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = []

[dependencies]
anstream = "1.0.0"
anyhow = "1.0.102"
broca-args = { version = "0.0.1", path = "../broca-args" }
broca-config = { version = "0.0.1", path = "../broca-config", features = ["serde", "toml"] }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"

[lints]
workspace = true

[dev-dependencies]
snapbox = { version = "1.2.2", features = ["dir", "term-svg", "json"] }
